--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="blob"></div>
   <div id="blur"></div>
-  <h1 data-value="MOUSEMOVE">Automate Grading with Gemini</h1>
+  <h1 data-value="MOUSEMOVE">Automate Grading with  <span>Gemini</span></h1>
   <!-- <div class="form">
     <p>
       <label>Question: </label>
