Multiple Files working

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
         </svg>
         <span class="tooltip">Add an image</span>
       </label>
-      <input type="file" id="file" name="file" />
+      <input type="file" id="file" name="file" multiple />
     </div>
     <input required="" placeholder="Upload image or type question..." type="text" id="messageInput" />
   </div>
